--- a/index.html
+++ b/index.html
@@ -46,17 +46,21 @@
         <div ng-controller="FormController as ctrl">
             <form name="form">
                 <input name="username" ng-model="ctrl.username" required minlength="3" maxlength="20"/>
-                <div ng-if="form.username.$touched && form.username.$error.required">Username is required</div>
-                <div ng-if="form.username.$touched && form.username.$error.minlength">Username must be more than 3 characters</div>
-                <div ng-if="form.username.$valid"></div>
+                <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$error.required">Username is required</div>
+                    <div ng-if="form.username.$error.minlength">Username must be more than 3 characters</div>
+                </div>
+ 
                 <input name="password" ng-model="ctrl.password" required minlength="8" />
-                <div ng-if="form.password.$touched && form.password.$error.required">Password is required.</div>
-                <div ng-if="form.password.$touched && form.password.$error.minlength">Password must be more than 8 characters.</div>
-                <div ng-if="form.password.$valid"></div>
+                <div ng-if="form.password.$touched">
+                    <div ng-if="form.password.$error.required">Password is required.</div>
+                    <div ng-if="form.password.$error.minlength">Password must be more than 8 characters.</div>
+                </div>
                 <input type="email" name="email" required ng-model="ctrl.email">
-                <div ng-if="form.email.$error.required">Email is required.</div>
-                <div ng-if="!form.email.$valid">Email is not valid.</div>
-                <div ng-if="form.email.$valid"></div>
+                <div ng-if="form.email.$touched">
+                    <div ng-if="form.email.$error.required">Email is required.</div>
+                    <div ng-if="!form.email.$valid">Email is not valid.</div>
+                </div>
                 <input type="submit">
             </form>
         </div>
