--- a/index.html
+++ b/index.html
@@ -44,9 +44,58 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form" >
+                <label>Username:</label>
+                <input name="username" 
+                       ng-model="ctrl.username" 
+                       required="required" 
+                       ng-minlength="4" 
+                       ng-keypress="limitKeypress($event,ctrl.username,20)">
+                <div>
+                    <span ng-if="form.username.$touched && form.username.$error.required">
+                        required!
+                    </span>
+                    <span ng-if="form.username.$touched && form.username.$error.minlength">
+                        must be longer than 3 characters
+                    </span>
+                    <span ng-if="form.username.$touched && form.username.$error.maxlength">
+                        can't be longer than 20 characters
+                    </span>
+                </div>  
+                <label>Password:</label>
+                <input name="password" 
+                       ng-model="ctrl.password" 
+                       required="required"
+                       ng-minlength="8"
+                       ng-pattern="/[!@#$%^&*()]/">
+                <div>
+                    <span ng-if="form.password.$touched && form.password.$error.required">
+                        required!
+                    </span>
+                    <span ng-if="form.password.$touched && form.password.$error.minlength">
+                        must be longer than 8 characters
+                    </span>
+                    <span ng-if="form.password.$touched && form.password.$error.pattern">
+                        must contain a special character
+                    </span>
+                </div>  
+                <label>Email:</label>
+                <input name="email"
+                       type="email" 
+                       ng-model="ctrl.email"
+                       required>
+                <div>
+                    <span ng-if="form.email.$touched && form.email.$error.required">
+                        required!
+                    </span>
+                    <span ng-if="form.email.$touched && !form.email.$valid">
+                        not a valid email
+                    </span>
+                </div>
+                <input type="submit" name="submit" value="Submit">
 
             </form>
+
         </div>
     </div>
 
