--- a/index.html
+++ b/index.html
@@ -44,7 +44,55 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              <input
+                  name="username"
+                  required="required"
+                  ng-model="ctrl.username"
+                  minlength="3"
+                  maxlength="20"/>
+            <div ng-if="form.username.$touched">
+              <div ng-if="form.username.$error.required">
+                  Username is required!
+              </div>
+              <div ng-if="form.username.$error.minlength">
+                Username must be more than 3 characters!
+             </div>
+             <div ng-if="form.username.$error.maxlength">
+                 Username must be less than 20 characters!
+             </div>
+           </div>
+
+
+              <input
+                  name="password"
+                  required="required"
+                  ng-model="ctrl.password"
+                  minlength="8"/>
+              <div ng-if="form.password.$touched">
+                <div ng-if="form.password.$error.required">
+                  Password is required!
+                </div>
+                <div ng-if="form.password.$error.minlength">
+                  Password must be more than 8 characters!
+                </div>
+              </div>
+
+              <input
+                  name="email"
+                  required="required"
+                  ng-model="ctrl.email"
+                  minlength="8"/>
+              <div ng-if="form.email.$touched">
+                <div ng-if="form.email.$error.required">
+                  Email is required!
+                </div>
+                <div ng-if="form.email.$error.minlength">
+                  Email must be more than 3 characters to be valid!
+                </div>
+
+              </div>
+
 
             </form>
         </div>
