--- a/index.html
+++ b/index.html
@@ -44,8 +44,51 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              <input name="username"
+                     minlength="3"
+                     maxlength="20"
+                     required="required"
+                     ng-model="ctrl.username" />
+              <div ng-if="form.username.$touched">
+                <div ng-if="form.username.$error.required">
+                  Username is required!
+                </div>
+                <div ng-if="form.username.$error.minlength">
+                  Username must be greater then 3 characters.
+                </div>
+                <div ng-if="form.username.$error.maxlength">
+                </div>
+              </div>
 
+              <input name="password"
+              required="required"
+              minlength="8"
+              maxlength="20"
+              ng-model="ctrl.password" />
+              <div ng-if="form.password.$touched">
+                <div ng-if="form.password.$error.required">
+                  password is required
+                </div>
+                <div ng-if="form.password.$error.minlength">
+                  password is too short and must be more then 8 characters
+                </div>
+                <div ng-if="form.password.$error.maxlength">
+                </div>
+              </div>
+
+              <input name="email"
+              type="email"
+              required="required"
+              ng-model="ctrl.email" />
+              <div ng-if="form.email.$touched">
+                <div ng-if="form.email.$error.required">
+                  email is required
+                </div>
+                <div ng-if="form.email.$error.email">
+                  must be a valid email!
+                </div>
+              </div>
             </form>
         </div>
     </div>
