--- a/index.html
+++ b/index.html
@@ -44,8 +44,68 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                <div>
+                    <strong>Username</strong>:
+                    <input
+                        type="text"
+                        name="username"
+                        minlength="3"
+                        maxlength="20"
+                        required="required"
+                        ng-model="ctrl.username" />
 
+                    <div ng-if="form.username.$touched">
+                        <div ng-if="form.username.$error.required">
+                            Username is required.
+                        </div>
+
+                        <div ng-if="form.username.$error.minlength">
+                            Username must be at least 3 characters long.
+                        </div>
+
+                        <div ng-if="form.username.$error.maxlength">
+                            Username cannot be longer than 20 characters.
+                        </div>
+                    </div>
+
+                    <strong>Password</strong>:
+                    <input
+                        type="text"
+                        name="password"
+                        minlength="8"
+                        required="required"
+                        ng-model="ctrl.password" />
+
+                    <div ng-if="form.password.$touched">
+                        <div ng-if="form.password.$error.required">
+                            Password is required.
+                        </div>
+
+                        <div ng-if="form.password.$error.minlength">
+                            Password must be at least 8 characters long.
+                        </div>
+                    </div>
+
+                    <strong>Email</strong>:
+                    <input
+                        type="email"
+                        name="email"
+                        required="required"
+                        ng-model="ctrl.email" />
+
+                    <div ng-if="form.email.$touched">
+                        <div ng-if="form.email.$error.required">
+                            Email is required.
+                        </div>
+
+                        <div ng-if="form.email.$invalid">
+                            Not a valid email.
+                        </div>
+                    </div>
+
+
+                </div>
             </form>
         </div>
     </div>
