--- a/index.html
+++ b/index.html
@@ -44,7 +44,63 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              Username:
+              <input
+                    ng-model="ctrl.username"
+                    name="username"
+                    type="text"
+                    minlength=3
+                    maxlength=20
+                    required="required"
+               />
+
+               <div ng-if="form.username.$touched">
+                   <div ng-if="form.username.$error.required">
+                     Username is required
+                   </div>
+                   <div ng-if="form.username.$error.minlength">
+                     Username must have at least 3 characters
+                   </div>
+                   <div ng-if="form.username.$error.maxlength">
+                     Username must be fewer than 21 characters
+                   </div>
+                 </div>
+
+                Password:
+                <input
+                      ng-model="ctrl.password"
+                      name="password"
+                      type="text"
+                      minlength=8
+                      required="required"
+                 />
+
+                <div ng-if="form.password.$touched">
+                     <div ng-if="form.password.$error.required">
+                       Password is required
+                     </div>
+                     <div ng-if="form.password.$error.minlength">
+                       Username must be over 8 characters
+                     </div>
+                </div>
+
+                Email:
+                <input
+                      ng-model="ctrl.email"
+                      name="email"
+                      type="email"
+                      required="required"
+                 />
+
+                 <div ng-if="form.email.$touched">
+                     <div ng-if="form.email.$error.required">
+                       Email is required
+                     </div>
+                     <div ng-if="form.email.$error.email">
+                       Email must be valid
+                     </div>
+                   </div>
 
             </form>
         </div>
