fixes typo in div tag

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div ng-if="form.email.$touched">
                         <div ng-if="form.email.$error.required">
                             Email is required!
-                        </dvi>
+                        </div>
                         <div ng-if="form.email.$error.email">
                             Email must be valid!
                         </div>
