--- a/index.html
+++ b/index.html
@@ -44,7 +44,42 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              <label>Username: </label>
+              <input name="username" ng-model="ctrl.username" required="required" minlength="3" maxlength="20" />
+              <div ng-if="form.username.$touched">
+                <div ng-if="form.username.$error.required">
+                  Username is required!
+                </div>
+                <div ng-if="form.username.$error.minlength">
+                  Username must be longer than 3 characters!
+                </div>
+                <div ng-if="form.username.$error.maxlength">
+                  Username cannot be more than 20 characters!
+                </div>
+              </div> <br><br>
+
+              <label>Password: </label>
+              <input name="password" ng-model="ctrl.password" required="required" minlength="8"/>
+              <div ng-if="form.password.$touched">
+                <div ng-if="form.password.$error.required">
+                  Password is required!
+                </div>
+                <div ng-if="form.password.$error.minlength">
+                  Password must be longer than 8 characters!
+                </div>
+              </div> <br><br>
+
+              <label>Email: </label>
+              <input name="email" type="email" ng-model="ctrl.email" required="required" />
+              <div ng-if="form.email.$touched">
+                <div ng-if="form.email.$error.required">
+                  Email is required!
+                </div>
+                <div ng-if="form.email.$error.email">
+                  Email must be in a valid format!
+                </div>
+              </div>
 
             </form>
         </div>
