--- a/index.html
+++ b/index.html
@@ -44,7 +44,30 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name='form'>
+
+              <label for="username">Username: </label>
+              <input name="username" ng-model="ctrl.username" ng-minlength="3" ng-maxlength="20" required="required">
+                <div ng-if="form.username.$touched">
+                  <div ng-if="form.username.$error.required">Username is required!</div>
+                  <div ng-if="form.username.$error.minlength">Username must be at least 3 characters!</div>
+                  <div ng-if="form.username.$error.maxlength">Username cannot exceed 20 characters!</div>
+                </div>
+
+              <label for="password">Password: </label>
+              <input name="password" ng-model='ctrl.password' required='required' ng-minlength='8'>
+                <div ng-if="form.password.$touched">
+                  <div ng-if="form.password.$error.required">Password is required!</div>
+                  <div ng-if="form.password.$error.minlength">Password must be at least 8 characters!</div>
+                </div>
+
+              <label for="email">Email: </label>
+              <input name="email" ng-model='ctrl.email' required="required" type='email'>
+                <div ng-if="form.email.$touched">
+                  <div ng-if="form.email.$error.required">Email is required!</div>
+                  <div ng-if="form.email.$error.email">Email must be valid!</div>
+
+                </div>
 
             </form>
         </div>
