--- a/index.html
+++ b/index.html
@@ -44,7 +44,66 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+              <div class="">
+                <label for="username">Username</label>
+                  <input
+                  type="text"
+                  name="username"
+                  ng-model="ctrl.username"
+                  required="required"
+                  minlength="3"
+                  maxlength="20"
+                  />
+                  <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$error.required">
+                      Username is required!
+                    </div>
+
+                    <div ng-if="form.username.$error.minlength">
+                      Should be at least 3 letters
+                    </div>
+                  </div>
+              </div>
+
+            <div>
+              <label for="password">Password</label>
+                <input
+                type="password"
+                 name="password"
+                 ng-model="password"
+                 required="required"
+                 minlength="8"
+                 />
+
+                <div ng-if="form.password.$touched" >
+                  <div ng-if="form.password.$error.required">
+                    Password is required!
+                  </div>
+                  <div ng-if="form.password.$error.minlength">
+                    At least 8 characters!
+                  </div>
+                </div>
+            </div>
+
+            <div>
+              <label for="email">Email</label>
+                <input
+                type="email"
+                name="email"
+                ng-model="email"
+                required="required"
+                />
+                <div ng-if="form.email.$touched">
+                  <div ng-if="form.email.$error.required">
+                      Email is required!
+                  </div>
+                  <div ng-if="form.email.$error.email">
+                      Should be valid email!
+                  </div>
+
+                </div>
+            </div>
 
             </form>
         </div>
