add validation to fields using Angular

--- a/index.html
+++ b/index.html
@@ -44,7 +44,28 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                
+                <label>Username: </label><input type="text" name="username" ng-model="ctrl.username" minlength="3" maxlength="20" required>
+                <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$error.required">Username is required!</div>
+                    <div ng-if="form.username.$error.minlength">Username must be more than 3 characters!</div>
+                    <div  ng-if="form.username.$error.maxlength">Username must be less than 20 characters!</div>  
+                </div>
+                <br />
+
+                <label>Password: </label><input type="text" name="password" ng-model="ctrl.password" required minlength="8">
+                <div ng-if="form.password.$touched">
+                    <div ng-if="form.password.$error.required">Password is required!</div>
+                    <div ng-if="form.password.$error.minlength">Password must be more than 8 characters</div>
+                </div>
+                <br />
+
+                <label>Email: </label><input type="email" name="email" required ng-model="ctrl.email">
+                <div ng-if="form.email.$touched">
+                    <div ng-if="form.email.$error.required">Email is required!</div>
+                    <div ng-if="form.email.$invalid">Enter a valid email address!</div>
+                </div>
 
             </form>
         </div>
