--- a/index.html
+++ b/index.html
@@ -49,27 +49,39 @@
                 name="username"
                 required="required"
                 ng-model="ctrl.username"
-                maxlength="20"
-                minlength="3"/>
+                ng-maxlength="20"
+                ng-minlength="3">
 
-
-                <div ng-if="form.username.$dirty"></div>
-                
-               
                 <div ng-if="form.username.$touched">
-                    This field is required. </div>
+                <div ng-if="form.username.$error.minlength">
+                    Username must be greater than 3 characters</div>
+
+                    <div ng-if="form.username.$error.required">
+                    Name is required.</div></input>
 
 
-                Password: <input 
+
+               <input 
                 name="password"
                 required="required"
-                ng-model="ctrl.password"/>
-                Email: <input
+                ng-model="ctrl.password"
+                ng-minlength="8"/>
+                <div ng-if="form.password.$touched">
+                <div ng-if="form.password.$error.required">
+                    Password is required.</div>
+                    <div ng-if="form.password.$error.minlength">
+                        Password must be more than 8 characters.</div>
+                <input
                 name="email"
                 type="email"
                 required="required" 
                 ng-model="ctrl.email"/>
-
+                <div ng-if="form.email.$touched">
+                  <div ng-if="form.email.$error.required">
+                    Email is required.</div>
+                    <div ng-if="form.email.$error.email">
+                        Email is not valid
+                    </div>
 
                 <!-- <input type="submit" ng-click="update(user)" value="Submit" /> -->
             </form>
