--- a/index.html
+++ b/index.html
@@ -44,8 +44,46 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                <input 
+                    name="username"
+                    required="required"
+                    ng-model="ctrl.username"
+                    minlength="3"
+                    maxlength="20" />
 
+        <div ng-if="form.username.$touched"> 
+            <div ng-if="form.username.$error.required">
+            Username is required! </div>
+            <div ng-if="form.username.$error.minlength">
+            Username must be at least 3 characters! </div>
+            <div ng-if="form.username.$error.maxlength">
+            Username must be 20 characters max! </div>
+        </div>    
+                <input
+                    name="password" 
+                    required="required"
+                    ng-model="ctrl.password"
+                    minlength="8" />
+
+        <div ng-if="form.password.$touched"> 
+            <div ng-if="form.password.$error.required">
+            Password is required! </div>
+            <div ng-if="form.password.$error.minlength">
+            Password is min 8 characters! </div>
+        </div>
+                <input
+                    name="email" 
+                    required="required"
+                    type="email"
+                    ng-model="ctrl.email" />
+
+        <div ng-if="form.email.$touched">
+            <div ng-if="form.email.$error.required">
+            Email is required! </div>  
+            <div ng-if="form.email.$error.email">
+            Email must be valid! </div>
+        </div>
             </form>
         </div>
     </div>
