--- a/index.html
+++ b/index.html
@@ -44,8 +44,42 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                <input type="text" name="username" ng-model="ctrl.username" ng-minlength="minUser" maxlength="20" required >
+               
+                <!-- Username Error Messages -->
+                <div ng-if="form.username.$touched">
+                    <div ng-if="form.username.$error.required">
+                    Username is required!
+                    </div>
+                    <div ng-if="form.username.$error.minlength">
+                        Username should be at least 3 characters.
+                    </div>
+                </div>
 
+                <input type="text" name="password" ng-model="ctrl.password" ng-minlength="minPassword" required >
+
+                <!-- Password Error Messages -->
+                <div ng-if="form.password.$touched">
+                    <div ng-if="form.password.$error.required">
+                        Password is required!
+                    </div>
+                    <div ng-if="form.password.$error.minlength">
+                        Password should be at least 8 characters.
+                    </div>
+                </div>
+
+                <input type="email" name="email" ng-model="ctrl.email" required >
+                
+                <!-- Email Error Messages -->
+                <div ng-if="form.email.$touched">
+                    <div ng-if="form.email.$error.required">
+                        Email is required!
+                    </div>
+                    <div ng-if="form.email.$error.email">
+                        Please enter a valid email address <em>(sample@gmail.com)</em>.
+                    </div>
+                </div>
             </form>
         </div>
     </div>
