--- a/index.html
+++ b/index.html
@@ -44,9 +44,54 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+          <form name="form">
+            Username: <input
+                name="username"
+                required="required"
+                minlength="3"
+                maxlength="20"
+                ng-model="ctrl.username" />
 
-            </form>
+            <div ng-if="form.username.$touched">
+              <div ng-if="form.username.$error.required">
+                Username required!
+              </div>
+              <div ng-if="form.username.$error.minlength">
+                Username needs at least 3 characters!
+              </div>
+              <div ng-if="form.username.$error.maxlength">
+                Username is too long!
+              </div>
+            </div>
+
+            Password: <input
+                name="password"
+                required="required"
+                minlength="8"
+                ng-model="ctrl.password" />
+            <div ng-if="form.username.$touched">
+              <div ng-if="form.password.$error.required">
+                Password is required!
+              </div>
+              <div ng-if="form.password.$error.minlength">
+                Password is needs at least 8 characters!
+              </div>
+            </div>
+
+            Email: <input
+                name="email"
+                required="required"
+                type="email"
+                ng-model="ctrl.email" />
+            <div ng-if="form.username.$touched">
+              <div ng-if="form.email.$error.required">
+                Email is required!
+              </div>
+              <div ng-if="form.email.$error.email">
+                Email must be valid!
+              </div>
+            </div>
+          </form>
         </div>
     </div>
 
