--- a/index.html
+++ b/index.html
@@ -44,8 +44,46 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+                <label for="username">Username:</label>
+                <input type="text" ng-model="ctrl.username" required="required" name="username" minlength="3" maxlength="20">
 
+                <div ng-if="form.username.$touched"> 
+                    <div ng-if="form.username.$error.required">
+                        Username is required!
+                    </div>
+                    <div ng-if="form.username.$error.minlength || form.username.$error.maxlength">
+                        Username must be between 3 and 20 characters!
+                    </div>
+                </div>
+
+                <label for="password">Password:</label>
+                <input type="password" name="password" ng-model="ctrl.password" required="required" minlength="8">
+
+                <div ng-if="form.password.$touched"> 
+                      <div ng-if="form.password.$error.required">
+                        Password is required!
+                    </div>
+                    <div ng-if="form.password.$error.minlength">
+                        Password must be at least 8 characters!
+                    </div>
+                </div>
+
+                <label for="email">Email Address:</label>
+                <input type="email" name="email" ng-model="ctrl.email" required="required">
+
+                <div ng-if="form.email.$touched"> 
+                    <div ng-if="form.email.$error.required">
+                        Email is required!
+                    </div>
+                     <div ng-if="form.email.$error.email">
+                        A valid email is required!
+                    </div>
+                </div>
+
+                <input type="submit" name="submit">
+
+                  
             </form>
         </div>
     </div>
