--- a/index.html
+++ b/index.html
@@ -44,7 +44,53 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
+            <form name="form">
+
+              <div>
+                <p>Username:</p>
+                <input type="text" name="username" minlength="3" maxlength="20" required="required" ng-model="ctrl.username"> </input>
+                <div ng-if="form.username.$touched">
+                  <div ng-if="form.username.$error.required">
+                    <p>Username is required!</p>
+                  </div>
+                  <div ng-if="form.username.$error.minlength">
+                    <p>User name needs to be more than 3 characters!</p>
+                  </div>
+                  <div ng-if="form.username.$error.maxlength">
+                    <p>Username needs to be less than 20 characters!</p>
+                  </div>
+                </div>
+              </div>
+
+              <div>
+                <p>Password:</p>
+                <input type:"password" name="password" minlength="8" required="required" ng-model="ctrl.password"> </input>
+                <div ng-if="form.password.$touched">
+                  <div ng-if="form.password.$error.required">
+                    <p>Password is required!</p>
+                  </div>
+                  <div ng-if="form.password.$error.minlength">
+                    <p>Password needs to be more than 8 characters!</p>
+                  </div>
+                </div>
+              </div>
+
+
+
+              <div>
+                <p>Email:</p>
+                <input type="email" name="email" required="required" ng-model="ctrl.email"> </input>
+                <div ng-if="form.email.$touched">
+                  <div ng-if="form.email.$error.required">
+                    <p>Email required!</p>
+                  </div>
+                  <div ng-if="form.email.$error.email">
+                    <p>Email is not valid!</p>
+                  </div>
+                </div>
+              </div>
+
+
 
             </form>
         </div>
