--- a/index.html
+++ b/index.html
@@ -44,9 +44,47 @@
 
     <div ng-app="app" class="app">
         <div ng-controller="FormController as ctrl">
-            <form>
 
+            <form name="form">
+              <labl for="username">Username: </label>
+              <input
+               name="username"
+               required="required"
+               ng-model="ctrl.username"
+               minlength="3"
+               nmaxlength="20" />
+
+               <div ng-if="form.username.$touched">
+                 <div ng-if="form.username.$error.required">Username is required!</div>
+                 <div ng-if="form.username.$error.minlength">Username must be at least 3 characters!</div>
+                 <div ng-if="form.username.$error.maxlength">Username must be less than 20 characters!</div>
+               </div>
+
+              <labl for="password">Password: </label>
+              <input
+              name="password"
+              required="required"
+              ng-model="ctrl.password"
+              minlength="8" />
+
+              <div ng-if="form.password.$touched">
+                <div ng-if="form.password.$error.required">Password is required!</div>
+                <div ng-if="form.password.$error.minlength">Password must be at least 8 characters!</div>
+              </div>
+
+              <labl for="email">Email: </label>
+              <input
+              name="email"
+              type="email"
+              required="required"
+              ng-model="ctrl.email" />
+
+              <div ng-if="form.email.$touched">
+                <div ng-if="form.email.$error.required">Email is required!</div>
+                <div ng-if="form.email.$error.email">Enter a valid email address!</div>
+              </div>
             </form>
+
         </div>
     </div>
 
